--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
     text-wrap: balance;
   }
 }
+@layer base {
+  .text-edge-outline {
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
+  }
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
