--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  min-height: 100vh;
 }
 
 /* Scrollbar styling */
